fixing home link, again, ugh

--- a/real/index.html
+++ b/real/index.html
@@ -202,7 +202,7 @@ is bragable.</font></p>
 <p align="left" style="margin-top: 1; margin-bottom: 1">&nbsp;</p>
 <p align="left" style="margin-top: 1; margin-bottom: 1"><a href="http://www.realultimatepower.net"><img border="0" src="ninjasig.jpg" width="150" height="50"></a><font face="Arial">The
 original REAL ULTIMATE POWER.</font></p>
-<p><a href="../">Back to ExceptBuses</a>
+<p><a href="../home.html">Back to ExceptBuses</a>
 <p align="left" style="margin-top: 1; margin-bottom: 1">&nbsp;</p>
 <p align="left" style="margin-top: 1; margin-bottom: 1">&nbsp;</p>
 <hr>
